--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3",
     "sucrase": "^3.35.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mariadb": "^3.4.5",
+    "sequelize": "^6.37.7"
   }
 }
